[package]
name = "neli"
version = "0.7.0-rc1"
edition = "2021"
authors = ["John Baublitz <john.m.baublitz@gmail.com>"]
description = "Type safe netlink library written in Rust"
license = "BSD-3-Clause"
repository = "https://github.com/jbaublitz/neli"
keywords = ["netlink"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "neli"
path = "src/lib.rs"

[dependencies]
bitflags = "1.3"
byteorder = "1.3"
derive_builder = "0.11"
getset = "0.1.2"
libc = "0.2.105"
log = "0.4"

[dependencies.neli-proc-macros]
version = "0.2.0-rc1"
path = "neli-proc-macros"

[dependencies.parking_lot]
version = "0.12.1"
optional = true

[dependencies.tokio]
version = "1"
features = ["io-util", "net", "sync", "rt"]
optional = true

[dev-dependencies]
env_logger = "0.9.0"
lazy_static = "1.4.0"

[dev-dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[features]
default = ["sync"]
sync = ["parking_lot"]
async = ["tokio"]
netfilter = []
