[package]
name = "neli"
version = "0.6.5"
edition = "2018"
authors = ["John Baublitz <john.m.baublitz@gmail.com>"]
description = "Type safe netlink library written in Rust"
license = "BSD-3-Clause"
repository = "https://github.com/jbaublitz/neli"
keywords = ["netlink"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "neli"
path = "src/lib.rs"

[dependencies]
byteorder = "1.3"
libc = "0.2.168"
log = "0.4"

[dependencies.neli-proc-macros]
version = "0.1"
path = "neli-proc-macros"

[dependencies.tokio]
version = "1"
features = ["io-util", "net"]
optional = true

[dev-dependencies]
env_logger = "0.9.0"
lazy_static = "1.4.0"

[dev-dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[features]
default = []
async = ["tokio"]
netfilter = []
