[package]
name = "neli-examples"
version = "0.1.0"
edition = "2018"
authors = ["John Baublitz <john.m.baublitz@gmail.com>"]
description = "Examples for use with neli"
license = "BSD-3-Clause"
repository = "https://github.com/jbaublitz/neli"
keywords = ["netlink"]

[[bin]]
name = "create-nested-attributes"
path = "create-nested-attributes.rs"

[[bin]]
name = "ctrl-list"
path = "ctrl-list.rs"

[[bin]]
name = "genl_stream"
path = "genl_stream.rs"

[[bin]]
name = "getips"
path = "getips.rs"

[[bin]]
name = "route-list"
path = "route-list.rs"

[[bin]]
name = "lookup_id"
path = "lookup_id.rs"

[[bin]]
name = "error_packet"
path = "error_packet.rs"

[dependencies.tokio]
version = "1.0"
optional = true

[dependencies.tokio-stream]
version = "0.1"
optional = true

[dependencies.neli]
version = "0.5.0"
path = ".."

[features]
async = ["tokio", "tokio-stream", "neli/async"]
logging = ["neli/logging"]
