[package]
name = "neli-proc-macros"
version = "0.1.4"
authors = ["John Baublitz <john.m.baublitz@gmail.com>"]
edition = "2018"
description = "Procedural macros for neli"
license = "BSD-3-Clause"
repository = "https://github.com/jbaublitz/neli"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
either = "1.6"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.syn]
version = "1"
features = ["full", "extra-traits"]
