[package]
name = "neli-proc-macros"
version = "0.2.0"
authors = ["John Baublitz <john.m.baublitz@gmail.com>"]
edition = "2024"
description = "Procedural macros for neli"
license = "BSD-3-Clause"
repository = "https://github.com/jbaublitz/neli"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
either = "1.6"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.syn]
version = "2.0"
features = ["full", "extra-traits"]
